--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -9,7 +9,38 @@
     android:background="@drawable/bottom_sheet_background"
     tools:context=".fragment.modal.bottom_sheet.BottomSheetFragment">
 
-    <androidx.fragment.app.FragmentContainerView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_marginHorizontal="30dp"
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/baseline_arrow_back_ios_24"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="User Info"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:gravity="center"/>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="20dp"
+        android:background="@android:color/darker_gray"/>
+
+    <fragment
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:id="@+id/nav_host_fragment_modal"
         android:layout_width="match_parent"
