--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -40,7 +41,7 @@
         android:layout_marginHorizontal="20dp"
         android:background="@android:color/darker_gray"/>
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:id="@+id/nav_host_fragment_modal"
         android:layout_width="match_parent"
@@ -48,4 +49,4 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/bottom_sheet_nav_graph" />
 
-</LinearLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
