--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,19 +5,22 @@
 
     <data>
         <import type="android.graphics.drawable.Drawable"/>
+        <import type="com.example.databinding.data.Image"/>
+        <variable
+            name="image"
+            type="Image" />
         <variable
             name="drawable"
             type="Drawable" />
         <variable
             name="viewModel"
             type="com.example.databinding.fragment.home.HomeViewModel" />
-
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".mainActivity.MainActivity">
+        tools:context=".fragment.home.HomeFragment">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/textView"
@@ -45,17 +48,42 @@
             app:layout_constraintStart_toStartOf="@+id/textView"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            setImage="@{image.url}"
+            android:scaleType="centerCrop"
+            android:layout_marginVertical="30dp"
+            app:layout_constraintEnd_toEndOf="@+id/editText"
+            app:layout_constraintStart_toStartOf="@+id/editText"
+            app:layout_constraintTop_toBottomOf="@+id/editText"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{image.title}"
+            setVisibility="@{image.visibilityLevel}"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:layout_marginVertical="10dp"
+            app:layout_constraintEnd_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnBottomSheet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="100dp"
-            android:layout_marginVertical="100dp"
+            android:layout_marginVertical="50dp"
             android:text="click me"
             android:backgroundTint="@color/teal_200"
-            app:layout_constraintEnd_toEndOf="@+id/editText"
-            app:layout_constraintStart_toStartOf="@+id/editText"
-            app:layout_constraintTop_toBottomOf="@+id/editText" />
+            app:layout_constraintEnd_toEndOf="@+id/title"
+            app:layout_constraintStart_toStartOf="@+id/title"
+            app:layout_constraintTop_toBottomOf="@+id/title" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
