--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,6 +29,7 @@
             android:layout_marginTop="48dp"
             android:text="@{viewModel.name}"
             android:textSize="16sp"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -41,6 +42,7 @@
             android:layout_marginVertical="20dp"
             android:hint="text"
             android:singleLine="true"
+            android:visibility="invisible"
             android:paddingHorizontal="10dp"
             android:text="@={viewModel.name}"
             android:textSize="14sp"
@@ -53,6 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             setImage="@{image.url}"
+            android:visibility="invisible"
             android:scaleType="centerCrop"
             android:layout_marginVertical="30dp"
             app:layout_constraintEnd_toEndOf="@+id/editText"
@@ -68,6 +71,7 @@
             android:textSize="16sp"
             android:textColor="@color/black"
             android:gravity="center"
+            android:visibility="invisible"
             android:layout_marginVertical="10dp"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="@+id/imageView"
